--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <a href="https://github.com/bentonq/go-moon" class="btn">View on GitHub</a>
       <a href="https://github.com/bentonq/go-moon/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/bentonq/go-moon/tarball/master" class="btn">Download .tar.gz</a>
+      <a href="https://mpva7.app.goo.gl/naxz" class="btn">Download from store</a>
     </section>
 
     <section class="main-content">
