--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1 class="project-name">Go-moon</h1>
       <h2 class="project-tagline"></h2>
       <a href="https://github.com/bentonq/go-moon" class="btn">View on GitHub</a>
-      <a href="https://mpva7.app.goo.gl/zgxL" class="btn">Download from store</a>
+      <a href="https://mpva7.app.goo.gl/D6bk" class="btn">Download from store</a>
     </section>
 
     <section class="main-content">
