--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
       <h1 class="project-name">Go-moon</h1>
       <h2 class="project-tagline"></h2>
       <a href="https://github.com/bentonq/go-moon" class="btn">View on GitHub</a>
-      <a href="http://play.google.com/store/apps/details?id=com.lewaos.launcher" class="btn">Download from store</a>
+      <a href="http://play.google.com/store/apps/details?id=com.lewaos.launcher" class="btn">Test direct link</a>
+      <a href="https://af2f5.app.goo.gl/qL6j" class="btn">Test dynamic link</a>
+      <a href="https://af2f5.app.goo.gl/n9io" class="btn">Test dynamic ad link</a>
     </section>
 
     <section class="main-content">
