--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <a href="http://play.google.com/store/apps/details?id=com.lewaos.launcher" class="btn">Test direct link</a>
       <a href="https://af2f5.app.goo.gl/qL6j" class="btn">Test dynamic link</a>
       <a href="https://af2f5.app.goo.gl/n9io" class="btn">Test dynamic ad link</a>
-      <a href="https://af2f5.app.goo.gl/aM4K" class="btn">Test dynamic baidu link</a>
+      <a href="https://af2f5.app.goo.gl/pCDV" class="btn">Test dynamic lewa home link</a>
     </section>
 
     <section class="main-content">
